# rust-raytracing

./: .gitignore  Cargo.toml  README.md  output.ppm
src/: camera.rs  cli.rs  main.rs  preset_scenes.rs  scene.rs  utils.rs
src/hittables/: aarect.rs  block.rs  constant_medium.rs  hittable.rs  hittable_list.rs  instance.rs  mesh.rs  mod.rs  moving_sphere.rs  sphere.rs  tri.rs
src/types/: aabb.rs  bvh.rs  color.rs  mod.rs  ray.rs  texture.rs  transform.rs  vec2.rs  vec3.rs
src/types/materials/: mod.rs
