[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.8", features = ["derive"] }
num_cpus = "1.13.1"
itertools = "0.10.2"
image = "0.24.2"

imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"